# advent-of-code

./: .gitignore  .travis.yml  AdventOfCode.sln  Cargo.toml  LICENSE  README.md  advent-of-code.cabal  advent-of-code.fsproj  bower.json  build.fsx  packages.dhall  paket.dependencies  spago.dhall  stack.yaml
.github/workflows/: test.yml
2016/: AoC.2016.fsproj  App.config  Day01.fs  Day09.fs  Day11.fs  Library.fs  Play.fsx  Program.fs  Tests.fs  paket.references
2016/puzzles/: input-2016-day11-2.txt
src/: Util.fs  Util.hs  Util.purs  lib.rs
src/2016/: AoC.2016.fsproj  App.config  Day09.fs  Day09.purs  Day11.fsx
src/AoC2016/: Day01.fs  Day06.fs  Day09.fs  Day09.hs  Day09.purs  Day09.rs  Day11.fs  Day11.fsx  Day15.fs  Day18.fs  Library.fs  Play.fsx  mod.rs
src/AoC2016.fsproj/: AoC.2016.fsproj  App.config
src/AoC2018/: Day01.hs  Day02.hs
src/AoC2022/: Day01.hs  Day01.purs  Day01.rs  mod.rs
src/AoC2024/: Day01.hs
test/: Main.fs  Main.hs  Main.purs
