name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tgrospic/advent-of-code#readme
license:             MIT
license-file:        LICENSE
author:              Tomislav Grospic
maintainer:          grospic@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AoC2018.Day02
                     , AoC2018.Day01
                     , AoC2016.Day09
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , multiset
  default-language:    Haskell2010

test-suite advent-of-code-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , advent-of-code
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tgrospic/advent-of-code
